--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,7 +18,7 @@
 @import 'components/ui/textarea';
 // @import 'components/ui/checkbox';
 @import 'components/ui/pagination';
-// @import 'components/ui/popup';
+@import 'components/ui/popup';
 // @import 'components/ui/rating';
 // @import 'components/ui/timer';
 @import 'components/ui/accordion';
