--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -212,6 +212,17 @@
 	text-transform: uppercase;
 }
 
+@mixin medium-36 {
+	font-size: 36px;
+	font-weight: 500;
+}
+
+@mixin medium-36-uppercase {
+	font-size: 36px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
 @mixin medium-32 {
 	font-size: 32px;
 	font-weight: 500;
