--- a/src/styles/components/business/_form.scss
+++ b/src/styles/components/business/_form.scss
@@ -50,10 +50,12 @@
 		display: flex;
 		gap: 20px;
 		justify-content: space-between;
+		align-items: center;
 
 		@include tablet_small {
 			flex-direction: column;
 			gap: 10px;
+			align-items: flex-start;
 		}
 	}
 
@@ -77,6 +79,12 @@
 			@include mobile {
 				@include regular-14;
 			}
+		}
+	}
+
+	.btn {
+		@include mobile {
+			width: 100%;
 		}
 	}
 }
