--- a/src/styles/components/ui/_popup.scss
+++ b/src/styles/components/ui/_popup.scss
@@ -1,34 +1,23 @@
 .popup {
 	position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.4);
-    top: 0;
-    left: 0;
-    opacity: 0;
-    visibility: hidden;
-    overflow-y: auto;
-    overflow-x: hidden;
-    transition: opacity $transitionDuration;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.4);
+	top: 0;
+	left: 0;
+	opacity: 0;
+	visibility: hidden;
+	overflow-y: auto;
+	overflow-x: hidden;
+	transition: opacity $transitionDuration;
 	z-index: 10000;
 
-	&._open {
+	&.open {
 		opacity: 1;
 		visibility: visible;
-
-		// @include desktop_extra_small {
-		// 	overflow-y: scroll;
-  		// 	-webkit-overflow-scrolling: touch;
-		// }
 	}
 
-	// &._none {
-	// 	opacity: 0;
-    // 	visibility: hidden;
-	// 	height: 0;
-	// }
-
-	&._open &__content {
+	&.open &__content {
 		transform: translate(0px, 0px);
 		opacity: 1;
 	}
@@ -38,9 +27,8 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		padding: 3rem;
 		position: relative;
-		
+
 		@include tablet {
 			padding: 110px 20px;
 		}
@@ -48,14 +36,13 @@
 		@include mobile {
 			padding: 20px;
 		}
-	
 	}
 
 	&__content {
 		background-color: #fff;
 		max-width: 800px;
 		width: 100%;
-		padding: 40px;
+		padding: 30px;
 		position: relative;
 		transition: all $transitionDuration ease-in-out;
 		opacity: 0;
@@ -70,116 +57,52 @@
 				max-width: 90%;
 			}
 		}
-
-		&_image {
-			padding: 0;
-		}
-
-		&_wide {
-			max-width: 1086px;
-		}
-
-		&_no-padding {
-			padding-left: 0;
-			padding-right: 0;
-			padding-bottom: 0;
-
-			@include tablet_small {
-				padding-left: 0;
-				padding-right: 0;
-				padding-bottom: 0;
-			}
-		}
 	}
 
-	// #popup-feedback &__content {
-	// 	max-width: 764px;
-	// }
-
-	// .product &__content {
-	// 	max-width: 1560px;
-	// 	margin: auto 8rem;
-	// 	padding: 4rem;
-
-	// 	@include tablet {
-	// 		margin: 0;
-	// 		padding: 2rem;
-	// 	}
-	// }
-
-	// .product__media &__content {
-	// 	max-width: 1560px;
-	// 	margin: auto 8rem;
-	// 	padding: 0;
-
-	// 	@include tablet {
-	// 		margin: 0;
-	// 	}
-
-	// 	picture {
-	// 		display: block;
-	// 		width: 100%;
-	// 		height: 100%;
-	// 	}
-
-	// 	img,
-	// 	iframe {
-	// 		display: block;
-	// 		width: 100%;
-	// 		height: 80vh;
-	// 	}
-
-	// 	img {
-	// 		object-fit: cover;
-	// 	}
-	// }
-
-	&__image {
-		img {
-			max-width: 100%;
-			vertical-align: top;
-		}
-		
-	}
 	&__close {
 		position: absolute;
-		top: 40px;
-		right: 40px;
+		top: 30px;
+		right: 30px;
 		z-index: 100;
 		width: 24px;
 		height: 24px;
 		text-decoration: none;
-		background-image: url('@icons/close-icon.svg');
+		background-image: url('@icons/close.svg');
 		background-position: center;
 		background-repeat: no-repeat;
 
 		&:hover {
 			cursor: pointer;
-		}		
+		}
 
 		@include tablet_small {
 			right: 20px;
 			top: 20px;
 		}
 	}
-	
-	// &__title {
-	// 	font-size: 3rem;
-	// 	text-transform: uppercase;
-	// 	margin-bottom: 2rem;
 
-	// 	@include tablet {
-	// 		font-size: 2.2rem;
-	// 		margin-bottom: 1.5rem;
-	// 	}
-	// }
-	// &__text {
-	// 	font-size: 2rem;
-	// 	width: 100%;
-	// 	margin-bottom: 3rem;
+	.form {
+		position: unset;
+		padding: 0;
+		margin-top: 35px;
+		width: 100%;
 
-	// 	@include tablet {
-	// 		font-size: 1.4rem;
-	// 	}
-	// }
+		@include mobile {
+			margin-top: 15px;
+		}
+	}
+
+	h3 {
+		@include medium-36-uppercase;
+
+		@include mobile {
+			@include medium-20-uppercase;
+		}
+	}
+
+	p {
+		margin-top: 20px;
+		margin-bottom: 40px;
+	}
 }
+
