--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -128,7 +128,7 @@
     <div class="popup__content">
       <span class="popup__close close-popup"></span>
       <h2>Написать нам</h2>
-      <form class="form">
+      <form class="popup__form form">
         <div class="form__row">
           @@include('components/ui/_input-text.html', {placeholder: 'Ваше имя*', errorMessage: 'Введите ваше имя',
           name:
