--- a/src/styles/components/business/_history.scss
+++ b/src/styles/components/business/_history.scss
@@ -30,6 +30,14 @@
 		.dropdown__options {
 			opacity: 1;
 		}
+
+		.dropdown__option {
+			padding: 0;
+
+			&:hover {
+				background-color: unset;
+			}
+		}
 	}
 
 	.container {
