--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -2,24 +2,25 @@
   <div class="container">
     <div class="footer__top">
       <a class="footer__logo" href="/">
-        <img src="@icons/logo-footer.svg" />
+        <img src="@icons/logo-footer.svg" alt="logo" />
       </a>
       <div class="footer__info">
         <a href="tel:+7 (347) 292-14-70" class="link footer__phone">+7 (347) 292-14-70</a>
-        <span class="footer__write-us link link_green-arrow">Напишите нам</span>
+        <a class="footer__write-us link link_green-arrow popup-link" href="#write-us">Напишите нам</a>
         <div class="footer__social">Мы в социальных сетях:</div>
         <div class="footer__socials">
-          <a href="#">
-            <img src="@icons/tg.svg">
+          <a href="#" target="_blank">
+            <img src="@icons/tg.svg" alt="icon">
           </a>
-          <a href="#">
-            <img src="@icons/wa.svg">
+          <a href="#" target="_blank">
+            <img src="@icons/wa.svg" alt="icon">
           </a>
-          <a href="#">
-            <img src="@icons/vk.svg">
+          <a href="#" target="_blank">
+            <img src="@icons/vk.svg" alt="icon">
           </a>
         </div>
-        <div class="footer__association">Входит в состав <a class="link link_green" href="#">ассоциации развития
+        <div class="footer__association">Входит в состав <a class="link link_green" href="#" target="_blank">ассоциации
+            развития
             информационных технологий</a>
           Республики
           Башкортостан
@@ -115,7 +116,7 @@
     <div class="footer__bottom">
       <span>© «Fort Dialogue», 2023</span>
       <a href="#" class="link link_gray">Политика конфиденциальности</a>
-      <a href="https://wptt.ru" class="link link_gray">Разработка — Вебпространство</a>
+      <a href="https://wptt.ru" class="link link_gray" target="_blank">Разработка — Вебпространство</a>
     </div>
   </div>
 </footer>
