--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -37,7 +37,7 @@
       </div>
     </nav>
     <a class="link" href="tel:8 (800) 000-00-00">8 (800) 000-00-00</a>
-    <span class="link popup-link" href="#write-us">Написать нам</span>
+    <a class="link popup-link" href="#write-us">Написать нам</a>
   </div>
   <div class="dropdown header__lang">
     <div class="dropdown__button">
@@ -72,25 +72,22 @@
   <div class="menu__item">
     <a class="menu__link menu__link_chevron" href="#">Услуги</a>
     <div class="menu__inner">
-      <a class="link link_small" href="#">ИТС Курсор</a>
-      <a class="link link_small" href="#">АСУ ТП</a>
-      <a class="link link_small" href="#">Центры обработки данных</a>
       <a class="link link_small" href="#">Системы технической безопасности</a>
       <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
       <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
       <a class="link link_small" href="#">Системы технической безопасности</a>
       <a class="link link_small" href="#">Комплексная система диспетчерского контроля и мониторинга промышленного
         оборудования</a>
+      <a class="link link_small" href="#">ИТС Курсор</a>
+      <a class="link link_small" href="#">АСУ ТП</a>
+      <a class="link link_small" href="#">Центры обработки данных</a>
+
       <a class="link link_small" href="#">Готовые решения на базе шкафов собственного производства</a>
     </div>
   </div>
   <div class="menu__item">
     <a class="menu__link menu__link_chevron" href="#">Проекты</a>
     <div class="menu__inner">
-      <a class="link link_small" href="#">ИТС Курсор</a>
-      <a class="link link_small" href="#">АСУ ТП</a>
-      <a class="link link_small" href="#">Центры обработки данных</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
       <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
       <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
       <a class="link link_small" href="#">Системы технической безопасности</a>
@@ -103,12 +100,12 @@
   <div class="menu__item">
     <a class="menu__link menu__link_chevron" href="#">Медиа</a>
     <div class="menu__inner">
+      <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
+      <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
+      <a class="link link_small" href="#">Системы технической безопасности</a>
       <a class="link link_small" href="#">ИТС Курсор</a>
       <a class="link link_small" href="#">АСУ ТП</a>
       <a class="link link_small" href="#">Центры обработки данных</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
-      <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
       <a class="link link_small" href="#">Системы технической безопасности</a>
       <a class="link link_small" href="#">Комплексная система диспетчерского контроля и мониторинга промышленного
         оборудования</a>
@@ -141,7 +138,7 @@
         <div class="form__row">
           <div class="form__privacy">
             Отправляя форму, вы даете свое согласие
-            на <a href="#" class="link link_green">обработку своих персональных данных</a>
+            на <a href="#" class="link link_green" target="_blank">обработку своих персональных данных</a>
           </div>
           @@include('components/ui/_button.html',
           {type: 'submit', class: 'btn_green',children:'отправить'})
