--- a/src/styles/components/business/_career-section.scss
+++ b/src/styles/components/business/_career-section.scss
@@ -39,6 +39,11 @@
 		height: 100%;
 		object-fit: cover;
 		filter: brightness(50%);
+
+		@include tablet {
+			margin: unset;
+			max-height: 800px;
+		}
 	}
 
 	img {
@@ -53,12 +58,16 @@
 		height: 100%;
 		object-fit: cover;
 		filter: brightness(50%);
+
+		@include tablet {
+			margin: unset;
+			max-height: 500px;
+		}
 	}
 
 	h2 {
 		color: $white;
-		max-width: 700px;
-
+		max-width: 900px;
 		overflow: hidden;
 	}
 
@@ -87,6 +96,10 @@
 		.container {
 			grid-template-rows: minmax(0, 120px) auto auto;
 		}
+	}
+
+	&_high {
+		height: 1117px;
 	}
 
 	&__vacancys {
