--- a/src/styles/components/business/_header.scss
+++ b/src/styles/components/business/_header.scss
@@ -20,6 +20,10 @@
 		min-width: 175px;
 		transition: 0.4s ease-in-out;
 
+		a {
+			display: flex;
+		}
+
 		img:nth-child(2) {
 			display: none;
 		}
