--- a/src/styles/components/business/_submenu.scss
+++ b/src/styles/components/business/_submenu.scss
@@ -54,7 +54,7 @@
 		position: absolute;
 		right: 110px;
 		top: 47px;
-		background-image: url(@icons/cross-black.svg);
+		background-image: url(@icons/cross-black-large.svg);
 		height: 21px;
 		width: 21px;
 		background-size: 100%;
