--- a/src/styles/components/ui/_dropdown.scss
+++ b/src/styles/components/ui/_dropdown.scss
@@ -27,6 +27,15 @@
 			}
 		}
 
+		b {
+			@include transition;
+			@include regular-18;
+
+			@include tablet {
+				@include regular-16;
+			}
+		}
+
 		&:hover {
 			cursor: pointer;
 		}
