--- a/src/styles/components/business/_footer.scss
+++ b/src/styles/components/business/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
 	background-color: $gray90;
-	padding: 140px 0 30px 0;
+	padding: 140px 60px 30px 0;
 
 	@include tablet {
 		padding: 80px 0;
@@ -18,7 +18,7 @@
 		gap: 20px;
 
 		@include desktop_huge {
-			grid-template-columns: 20% calc(80% - 20px);
+			grid-template-columns: 23% calc(77% - 20px);
 		}
 
 		@include tablet {
@@ -98,7 +98,7 @@
 	&__association {
 		color: $gray20;
 		max-width: 377px;
-		display: inline;
+		display: inline-block;
 
 		.link {
 			display: inline;
@@ -145,6 +145,14 @@
 		}
 
 		.accordion__content {
+			.link {
+				@include regular-16;
+
+				@include mobile {
+					@include regular-14;
+				}
+			}
+
 			@include min_tablet {
 				gap: 15px !important;
 				height: unset !important;
@@ -158,6 +166,7 @@
 		display: flex;
 		justify-content: space-between;
 		border-top: solid 1px $gray70;
+		opacity: 0.5;
 
 		span {
 			@include regular-16;
