--- a/src/styles/components/business/_history.scss
+++ b/src/styles/components/business/_history.scss
@@ -97,19 +97,19 @@
 				gap: 22px;
 				align-items: center;
 				@include transition;
+				align-items: center;
 
 				&:first-child {
-					line-height: 70%;
+					line-height: 80%;
 				}
 
 				&::before {
 					content: url(@icons/stick.svg);
 					width: 20px;
-					height: 20px;
+					height: 10px;
 					display: flex;
 					align-items: center;
 					justify-content: center;
-					align-self: flex-start;
 				}
 
 				&.active {
@@ -122,6 +122,7 @@
 						height: 20px;
 						display: flex;
 						justify-content: center;
+						align-self: flex-start;
 					}
 				}
 			}
