--- a/src/styles/components/business/_projects-section.scss
+++ b/src/styles/components/business/_projects-section.scss
@@ -14,6 +14,14 @@
 		}
 	}
 
+	&_no-padding {
+		padding-top: 0;
+
+		@include tablet {
+			padding-top: 80px;
+		}
+	}
+
 	&__swiper {
 		padding-bottom: 80px;
 		margin-top: 80px;
