--- a/src/styles/components/business/_service-card.scss
+++ b/src/styles/components/business/_service-card.scss
@@ -3,7 +3,7 @@
 	display: grid;
 	gap: 16px;
 	align-items: start;
-	grid-template-rows: max-content auto auto;
+	grid-template-rows: minmax(0, 60px) auto auto;
 	min-height: 468px;
 	height: 100%;
 	position: relative;
@@ -11,6 +11,7 @@
 
 	@include tablet {
 		padding: 25px 20px;
+		grid-template-rows: minmax(0, 50px) auto auto;
 	}
 
 	&::after {
@@ -34,6 +35,17 @@
 	h3 {
 		@include transition;
 		color: $white;
+		overflow: hidden;
+		max-height: 60px;
+		text-overflow: ellipsis;
+
+		@include tablet {
+			max-height: 50px;
+		}
+
+		@include mobile {
+			max-height: 40px;
+		}
 	}
 
 	p {
@@ -41,6 +53,7 @@
 		overflow: hidden;
 		@include transition;
 		color: $white;
+		text-overflow: ellipsis;
 	}
 
 	.link {
@@ -67,17 +80,30 @@
 		@include tablet {
 			height: unset;
 			padding: 0 0 20px 0;
-			grid-template-rows: 200px minmax(0, 75px) auto auto;
+			grid-template-rows: 200px minmax(0, 85px) auto auto;
 			gap: 0;
+		}
+
+		@include tablet_small {
+			grid-template-rows: 200px auto auto auto;
 		}
 
 		&::after {
 			background: none;
 		}
 
+		&:hover {
+			img {
+				scale: 1.2;
+			}
+		}
+
+		img {
+			@include transition;
+		}
+
 		h3 {
 			color: $black;
-			overflow: hidden;
 
 			@include tablet {
 				margin-top: 30px;
@@ -109,6 +135,9 @@
 		.service-card__image {
 			position: unset;
 			height: 288px;
+			z-index: 0;
+			overflow: hidden;
+			width: 100%;
 
 			@include tablet {
 				height: 200px;
