--- a/src/styles/components/ui/_input.scss
+++ b/src/styles/components/ui/_input.scss
@@ -5,9 +5,11 @@ input {
 	outline: none;
 	@include regular-16;
 	background-color: transparent;
+	padding-right: 47px;
 
 	@include mobile {
 		padding: 15px 20px;
+		padding-right: 40px;
 	}
 
 	&:disabled {
@@ -20,7 +22,8 @@ input {
 	}
 
 	& ~ .pristine-error {
-		display: none;
+		color: $red;
+		@include regular-16;
 	}
 
 	&[aria-invalid='true'] {
@@ -82,7 +85,7 @@ input {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 5px;
 
 	.input__label {
 		@include regular-20;
@@ -103,6 +106,21 @@ input {
 		&.has-success {
 			.file-button {
 				border: 1px solid $green50;
+			}
+		}
+
+		&.has-danger {
+			margin-bottom: 25px;
+
+			@include mobile {
+				margin-bottom: 10px;
+			}
+
+			.pristine-error {
+				margin-bottom: -25px;
+				@include mobile {
+					margin-bottom: -10px;
+				}
 			}
 		}
 
@@ -258,4 +276,20 @@ input {
 // 		cursor: pointer;
 // 	}
 // }
+
+.has-success {
+	&::after {
+		position: absolute;
+		right: 28px;
+		top: 25px;
+		content: url(@icons/check.svg);
+		width: 16px;
+		height: 16px;
+
+		@include mobile {
+			top: 18px;
+			right: 20px;
+		}
+	}
+}
 
