--- a/src/styles/components/ui/_textarea.scss
+++ b/src/styles/components/ui/_textarea.scss
@@ -8,9 +8,11 @@ textarea {
 	resize: none;
 	@include regular-16;
 	background-color: transparent;
+	padding-right: 47px;
 
 	@include mobile {
 		padding: 15px 20px;
+		padding-right: 40px;
 	}
 
 	&:focus {
@@ -18,7 +20,7 @@ textarea {
 	&:disabled {
 	}
 	&::placeholder {
-		color: $gray60;
+		color: $black;
 	}
 
 	&::-webkit-scrollbar {
@@ -38,7 +40,8 @@ textarea {
 	}
 
 	& ~ .pristine-error {
-		display: none;
+		color: $red;
+		@include regular-16;
 	}
 
 	&[aria-invalid='true'] {
