--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,7 @@
 @import 'components/ui/tabs';
 @import 'components/ui/list';
 @import 'components/ui/search-bar';
+@import 'components/ui/up';
 
 @import 'components/business/breadcrumbs';
 @import 'components/business/header';
