--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -120,4 +120,10 @@
     </div>
   </div>
 </footer>
+<a class="up">
+  <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37" fill="none">
+    <path d="M27.75 23.125L18.5 13.875L9.25 23.125" stroke="#00AA4D" stroke-width="2" stroke-linecap="round"
+      stroke-linejoin="round" />
+  </svg>
+</a>
 @@include('components/business/_cookie.html')
