ref menu controller

--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -7,7 +7,7 @@
   </div>
   <div class="header__menu" id="mobile-menu">
     <nav class="header__nav">
-      <span class="link submenu__button">
+      <span class="link submenu__button" id="submenu-button">
         О компании<b>&#x25BE;</b>
       </span>
       <a class="link" href="#">
@@ -24,7 +24,7 @@
       </a>
       <!-- about company popup -->
       <div class="submenu" id="sub-menu">
-        <div class="submenu__close submenu__button"></div>
+        <div class="submenu__close submenu__button" id="submenu-close"></div>
         <span class="submenu__title">О компании</span>
         <div class="submenu__list">
           <a href="#" class="link">О компании</a>
@@ -49,7 +49,8 @@
     </div>
   </div>
   <div class="header__right-bar" id="bar">
-    <div class="header__burger" id="menu-button"></div>
+    <div class="header__burger" id="burger"></div>
+    <div class="header__close" id="close-menu"></div>
   </div>
 </header>
 <nav class="menu" id="menu">
