--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -5,7 +5,7 @@
         <img src="@icons/logo-footer.svg" alt="logo" />
       </a>
       <div class="footer__info">
-        <a href="tel:+7 (347) 292-14-70" class="link footer__phone">+7 (347) 292-14-70</a>
+        <a href="tel:+73472921470" class="link footer__phone">+7 (347) 292-14-70</a>
         <a class="footer__write-us link link_green-arrow popup-link" href="#write-us">Напишите нам</a>
         <div class="footer__social">Мы в социальных сетях:</div>
         <div class="footer__socials">
@@ -122,8 +122,7 @@
 </footer>
 <a class="up">
   <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37" fill="none">
-    <path d="M27.75 23.125L18.5 13.875L9.25 23.125" stroke="#00AA4D" stroke-width="2" stroke-linecap="round"
-      stroke-linejoin="round" />
+    <path d="M27.75 23.125L18.5 13.875L9.25 23.125" stroke="#00AA4D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
   </svg>
 </a>
 @@include('components/business/_cookie.html')
