--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </nav>
-    <a class="link" href="tel:8 (800) 000-00-00">8 (800) 000-00-00</a>
+    <a class="link" href="tel:88000000000">8 (800) 000-00-00</a>
     <a class="link popup-link" href="#write-us">Написать нам</a>
   </div>
   <div class="dropdown header__lang">
