--- a/src/styles/components/business/_projects-section.scss
+++ b/src/styles/components/business/_projects-section.scss
@@ -2,6 +2,7 @@
 	padding-top: 140px;
 	padding-bottom: 140px;
 	position: relative;
+	overflow-x: hidden;
 
 	@include tablet {
 		padding-top: 80px;
