--- a/src/styles/components/business/_enumeration.scss
+++ b/src/styles/components/business/_enumeration.scss
@@ -52,6 +52,10 @@
 	}
 
 	.accordion__content {
+		@include min_tablet {
+			opacity: 1 !important;
+		}
+
 		@include tablet {
 			margin-top: 40px !important;
 		}
