--- a/src/styles/components/business/_header.scss
+++ b/src/styles/components/business/_header.scss
@@ -71,8 +71,8 @@
 		@include tablet {
 			position: absolute;
 			left: 0;
-			top: 45px;
-			display: none;
+			top: -100vh;
+			display: flex;
 			flex-direction: column;
 			gap: 10px;
 			justify-content: flex-start;
@@ -81,9 +81,14 @@
 			border: none;
 			height: fit-content;
 			background-color: $white;
+			opacity: 0;
+			@include transition;
+			pointer-events: none;
 
 			&.active {
-				display: flex;
+				top: 45px;
+				opacity: 1;
+				pointer-events: unset;
 			}
 		}
 	}
@@ -179,6 +184,7 @@
 		background-color: $green50;
 		height: 100vh;
 		width: 60px;
+		@include transition;
 
 		@include tablet {
 			height: 45px;
