--- a/src/html/components/ui/_input-text.html
+++ b/src/html/components/ui/_input-text.html
@@ -1,14 +1,15 @@
 <div class="form-group input__container input__container_text">
 	@@if (context.label) {
-		@@if (context.id) {
-			<label class="input__label" for="@@id">@@label@@if (context.required) {*}</label>
-		}
-		@@if (!context.id) {
-			<span class="input__label">@@label@@if (context.required) {*}</span>
-		}
+	@@if (context.id) {
+	<label class="input__label" for="@@id">@@label@@if (context.required) {*}</label>
 	}
-	<input class="form-control" @@if (context.placeholder) {placeholder="@@placeholder"} @@if (context.required) {required} @@if (context.id) {id="@@id"} @@if (context.name) {name="@@name"} @@if (context.value) {value="@@value"} @@if (context.minlength) {minlength="@@minlength"} @@if (context.maxlength) {maxlength="@@maxlength"} data-type="text" type="text" @@if (context.errorMessage) {data-pristine-required-message="@@errorMessage"}>
+	@@if (!context.id) {
+	<span class="input__label">@@label@@if (context.required) {*}</span>
+	}
+	}
+	<input class="form-control" @@if (context.placeholder) {placeholder="@@placeholder" } @@if (context.required) {required} @@if (context.id) {id="@@id" } @@if (context.name) {name="@@name" } @@if (context.value) {value="@@value" } @@if (context.minlength) {minlength="@@minlength" } @@if (context.maxlength) {maxlength="@@maxlength" } data-type="text" type="text" @@if (context.errorMessage) {data-pristine-required-message="@@errorMessage" }>
+	<div class="pristine-success"></div>
 	@@if (context.reset) {
-		<button class="input__reset" type="reset">@@reset</button>
+	<button class="input__reset" type="reset">@@reset</button>
 	}
 </div>
