--- a/src/html/components/ui/_pagination.html
+++ b/src/html/components/ui/_pagination.html
@@ -9,13 +9,11 @@
 		<a href="#">5</a>
 		<a href="#" class="disabled">...</a>
 		<a href="#">20</a>
-		<a htef="#">
+		<a href="#">
 			<svg width="42" height="45" viewBox="0 0 42 45" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<rect width="42" height="45" fill="#F5F5F5" />
-				<path d="M14.4873 22H28.0402" stroke="#39393A" stroke-width="2" stroke-linecap="round"
-					stroke-linejoin="round" />
-				<path d="M21.2637 28.7764L28.0402 22L21.2637 15.2236" stroke="#39393A" stroke-width="2" stroke-linecap="round"
-					stroke-linejoin="round" />
+				<path d="M14.4873 22H28.0402" stroke="#39393A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+				<path d="M21.2637 28.7764L28.0402 22L21.2637 15.2236" stroke="#39393A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 			</svg>
 		</a>
 	</div>
