--- a/src/html/components/ui/_textarea.html
+++ b/src/html/components/ui/_textarea.html
@@ -1,11 +1,12 @@
 <div class="form-group textarea__container">
 	@@if (context.label) {
-		@@if (context.id) {
-			<label class="textarea__label" for="@@id">@@label@@if (context.required) {*}</label>
-		}
-		@@if (!context.id) {
-			<span class="textarea__label">@@label@@if (context.required) {*}</span>
-		}
+	@@if (context.id) {
+	<label class="textarea__label" for="@@id">@@label@@if (context.required) {*}</label>
 	}
-	<textarea class="form-control" @@if (context.placeholder) {placeholder="@@placeholder"} @@if (!context.placeholder) {placeholder="Введите текст"} @@if (context.required) {required} @@if (context.id) {id="@@id"} @@if (context.name) {name="@@name"} data-type="textarea" @@if (context.errorMessage) {data-pristine-required-message="@@errorMessage"} @@if (!context.errorMessage) {data-pristine-required-message="Введите текст"}></textarea>
+	@@if (!context.id) {
+	<span class="textarea__label">@@label@@if (context.required) {*}</span>
+	}
+	}
+	<textarea class="form-control" @@if (context.placeholder) {placeholder="@@placeholder" } @@if (!context.placeholder) {placeholder="Введите текст" } @@if (context.required) {required} @@if (context.id) {id="@@id" } @@if (context.name) {name="@@name" } data-type="textarea" @@if (context.errorMessage) {data-pristine-required-message="@@errorMessage" } @@if (!context.errorMessage) {data-pristine-required-message="Введите текст" }></textarea>
+	<div class="pristine-success"></div>
 </div>
