--- a/src/styles/components/business/_breadcrumbs.scss
+++ b/src/styles/components/business/_breadcrumbs.scss
@@ -34,6 +34,7 @@
 			display: -webkit-box;
 			-webkit-line-clamp: 1;
 			-webkit-box-orient: vertical;
+			display: block;
 
 			& ::after {
 				content: '';
