--- a/src/styles/components/business/_footer.scss
+++ b/src/styles/components/business/_footer.scss
@@ -157,6 +157,7 @@
 				gap: 15px !important;
 				height: unset !important;
 				max-height: unset !important;
+				opacity: 1 !important;
 			}
 		}
 	}
