--- a/src/styles/components/business/_services-section.scss
+++ b/src/styles/components/business/_services-section.scss
@@ -26,9 +26,7 @@
 			justify-content: flex-end;
 
 			@include desktop_huge {
-				flex-direction: column;
-				align-items: flex-end;
-				gap: 0;
+				gap: 15px;
 			}
 
 			@include mobile {
