--- a/src/styles/components/business/_submenu.scss
+++ b/src/styles/components/business/_submenu.scss
@@ -1,21 +1,31 @@
 .submenu {
 	position: fixed;
-	top: 100px;
+	top: -100%;
 	left: 0;
 	width: 100%;
 	background-color: $white;
 	padding: 80px 80px 96px 175px;
 	box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.08);
-	display: none;
+	opacity: 0;
+	@include transition;
+	pointer-events: none;
 
 	@include tablet {
 		top: 45px;
+		left: -100%;
 		padding: 30px 20px 109px 20px;
 		box-shadow: none;
 	}
 
 	&.active {
-		display: block;
+		top: 100px;
+		opacity: 1;
+		pointer-events: unset;
+
+		@include tablet {
+			top: 45px;
+			left: 0;
+		}
 	}
 
 	&__button {
@@ -35,6 +45,7 @@
 
 			b {
 				display: block;
+				@include transition;
 
 				@include tablet {
 					display: none;
@@ -44,7 +55,7 @@
 			&.active {
 				color: $green50;
 				b {
-					transform: rotate(180deg) translateY(-3px);
+					transform: rotate(180deg);
 				}
 			}
 		}
