--- a/src/styles/components/ui/_accordion.scss
+++ b/src/styles/components/ui/_accordion.scss
@@ -51,6 +51,8 @@
 			display: flex;
 			flex-direction: column;
 			gap: 10px;
+			opacity: 0;
+			@include transition;
 
 			@include tablet {
 				margin-top: 30px;
@@ -60,6 +62,7 @@
 		&_active {
 			.accordion__content {
 				height: unset;
+				opacity: 1;
 				max-height: 1000px;
 				padding-bottom: 30px;
 			}
