--- a/src/styles/components/ui/_up.scss
+++ b/src/styles/components/ui/_up.scss
@@ -24,10 +24,11 @@
 	}
 
 	@include tablet {
-		right: 20px;
-		bottom: 40px;
-		width: 40px;
-		height: 40px;
+		display: none;
+		// right: 20px;
+		// bottom: 40px;
+		// width: 40px;
+		// height: 40px;
 	}
 
 	&.active {
