--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -8,24 +8,24 @@
   <div class="header__menu" id="mobile-menu">
     <nav class="header__nav">
       <span class="link submenu__button" id="submenu-button">
-        О компании<b>&#x25BE;</b>
+        О компании
       </span>
-      <a class="link" href="#">
+      <span class="link submenu__button" id="solutions-button">
         Решения
-      </a>
-      <a class="link" href="#">
+      </span>
+      <span class="link submenu__button" id="services-button">
         Услуги
-      </a>
-      <a class="link" href="#">
+      </span>
+      <span class="link submenu__button" id="projects-button">
         Проекты
-      </a>
+      </span>
       <a class="link" href="#">
         Контакты
       </a>
-      <!-- about company popup -->
+      <!-- about company -->
       <div class="submenu" id="sub-menu">
-        <div class="submenu__close submenu__button" id="submenu-close"></div>
-        <span class="submenu__title">О компании</span>
+        <div class="submenu__close submenu__button"></div>
+        <a href="#" class="submenu__title link">О компании</a>
         <div class="submenu__list">
           <a href="#" class="link">О компании</a>
           <a href="#" class="link">35 лет истории успеха</a>
@@ -33,6 +33,47 @@
           <a href="#" class="link">Руководство</a>
           <a href="#" class="link">Партнеры</a>
           <a href="#" class="link">Лицензии и сертификаты</a>
+        </div>
+      </div>
+      <!-- solutions -->
+      <div class="submenu" id="solutions">
+        <div class="submenu__close submenu__button"></div>
+        <a href="#" class="submenu__title link">Решения</a>
+        <div class="submenu__list submenu__list_high">
+          <a href="#" class="link">Образование</a>
+          <a href="#" class="link">Органы государственной власти</a>
+          <a href="#" class="link">Здравоохранение</a>
+          <a href="#" class="link">Промышленность</a>
+          <a href="#" class="link">Транспорт</a>
+          <a href="#" class="link">Сельское хозяйство</a>
+          <a href="#" class="link">Нефтегазовый сектор</a>
+        </div>
+      </div>
+      <!-- services -->
+      <div class="submenu" id="services">
+        <div class="submenu__close submenu__button"></div>
+        <a href="#" class="submenu__title link">Услуги</a>
+        <div class="submenu__list">
+          <a href="#" class="link">Инженерные изыскания</a>
+          <a href="#" class="link">Проектирование</a>
+          <a href="#" class="link">Комплексные поставки</a>
+          <a href="#" class="link">Монтажные и пусконаладочные работы</a>
+          <a href="#" class="link">Сервис</a>
+          <a href="#" class="link">BIM</a>
+        </div>
+      </div>
+      <!-- projects -->
+      <div class="submenu" id="projects">
+        <div class="submenu__close submenu__button"></div>
+        <a href="#" class="submenu__title link">Проекты</a>
+        <div class="submenu__list submenu__list_high">
+          <a href="#" class="link">Образование</a>
+          <a href="#" class="link">Органы государственной власти</a>
+          <a href="#" class="link">Здравоохранение</a>
+          <a href="#" class="link">Промышленность</a>
+          <a href="#" class="link">Транспорт</a>
+          <a href="#" class="link">Сельское хозяйство</a>
+          <a href="#" class="link">Нефтегазовый сектор</a>
         </div>
       </div>
     </nav>
@@ -56,62 +97,17 @@
 <nav class="menu" id="menu">
   <a class="menu__link" href="#">О компании</a>
   <div class="menu__item">
-    <a class="menu__link menu__link_chevron" href="#">Решения</a>
-    <div class="menu__inner">
-      <a class="link link_small" href="#">ИТС Курсор</a>
-      <a class="link link_small" href="#">АСУ ТП</a>
-      <a class="link link_small" href="#">Центры обработки данных</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
-      <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Комплексная система диспетчерского контроля и мониторинга промышленного
-        оборудования</a>
-      <a class="link link_small" href="#">Готовые решения на базе шкафов собственного производства</a>
-    </div>
+    <a class="menu__link" href="#">Решения</a>
   </div>
   <div class="menu__item">
-    <a class="menu__link menu__link_chevron" href="#">Услуги</a>
-    <div class="menu__inner">
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
-      <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Комплексная система диспетчерского контроля и мониторинга промышленного
-        оборудования</a>
-      <a class="link link_small" href="#">ИТС Курсор</a>
-      <a class="link link_small" href="#">АСУ ТП</a>
-      <a class="link link_small" href="#">Центры обработки данных</a>
-
-      <a class="link link_small" href="#">Готовые решения на базе шкафов собственного производства</a>
-    </div>
+    <a class="menu__link" href="#">Услуги</a>
   </div>
   <div class="menu__item">
-    <a class="menu__link menu__link_chevron" href="#">Проекты</a>
-    <div class="menu__inner">
-      <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
-      <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Комплексная система диспетчерского контроля и мониторинга промышленного
-        оборудования</a>
-      <a class="link link_small" href="#">Готовые решения на базе шкафов собственного производства</a>
-    </div>
+    <a class="menu__link" href="#">Проекты</a>
   </div>
   <a class="menu__link" href="#">Карьера</a>
   <div class="menu__item">
-    <a class="menu__link menu__link_chevron" href="#">Медиа</a>
-    <div class="menu__inner">
-      <a class="link link_small" href="#">Программно-аппаратный комплекс «Протокол»</a>
-      <a class="link link_small" href="#">Система вибромониторинга насосного оборудования</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">ИТС Курсор</a>
-      <a class="link link_small" href="#">АСУ ТП</a>
-      <a class="link link_small" href="#">Центры обработки данных</a>
-      <a class="link link_small" href="#">Системы технической безопасности</a>
-      <a class="link link_small" href="#">Комплексная система диспетчерского контроля и мониторинга промышленного
-        оборудования</a>
-      <a class="link link_small" href="#">Готовые решения на базе шкафов собственного производства</a>
-    </div>
+    <a class="menu__link" href="#">Медиа</a>
   </div>
   <a class="menu__link" href="#">Контакты</a>
   <div class="menu__block">
