--- a/src/styles/components/business/_contacts-map.scss
+++ b/src/styles/components/business/_contacts-map.scss
@@ -21,7 +21,7 @@
 		width: 100%;
 		max-width: 890px;
 		background-color: $gray04;
-		padding: 60px 60px 40px 60px;
+		padding: 60px;
 		display: flex;
 		flex-direction: column;
 		gap: 24px;
@@ -34,7 +34,7 @@
 			width: 100%;
 			max-width: unset;
 			position: unset;
-			padding: 30px 20px 20px 20px;
+			padding: 20px;
 		}
 
 		h3 {
@@ -61,11 +61,8 @@
 		display: flex;
 		flex-direction: column;
 		gap: 30px;
-		border-bottom: solid 1px $gray30;
-		padding-bottom: 60px;
 
 		@include tablet {
-			padding-bottom: 40px;
 			gap: 20px;
 		}
 
